--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vant": "^2.8.7",
+    "vue": "^2.6.11",
+    "vue-router": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "babel-plugin-import": "^1.13.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
